<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timetable Now</string>
    <string name="settings">Settings</string>
    <string name="info">Information</string>
    <string name="image_hash">Image #</string>
    <string name="select">Select</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="subject">Subject</string>
    <string name="select_room">Select Room</string>
    <string name="place">Place</string>
    <string name="tasks">Tasks</string>
    <string name="representation_plan">Representation Plan</string>
    <string name="new_place">New Place</string>
    <string name="day_of_week">Day Of Week</string>
    <string name="select_day_of_week">Select day of week</string>
    <string name="time">Time</string>
    <string name="new_time">New Time</string>
    <string name="break_">Break</string>
    <string name="break_first_letter">B</string>
    <string name="lesson">Lesson</string>
    <string name="color">Color</string>
    <string name="select_color">Select a color</string>
    <string name="free">Free</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="today_no_lesson">No lessons today!</string>
    <string name="title_activity_setup" translatable="false">SetupActivity</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_change_image">Change Image</string>
    <string name="action_change_color">Change Color</string>
    <string name="create_as_new_lesson">Create as new lesson</string>
    <string name="create_as_new_break">Create as new break</string>
    <string name="create_as_new_free_time">Create as new free time</string>
    <string name="replace_current_lesson" formatted="false">Replace current lesson (%s)</string>
    <string name="setup_addon_choose">Choose your School from the list, otherwise skip the step</string>
    <string name="title_activity_floating" translatable="false">Floating Activity</string>
    <string name="overview">Overview</string>
    <string name="week_overview">Week Overview</string>
    <string name="time_grid">Time Grid</string>
    <string name="insert_break">Insert break</string>
    <string name="insert_break_dialog_text">The next time is normally a break. Insert a break instead of a lesson?</string>
    <string name="done">Done</string>
    <string name="day_overview">Day overview</string>
    <string name="new_lesson">New Lesson</string>
    <string name="new_subject">New Subject</string>
    <string name="new_teacher">New Teacher</string>
    <string name="add_new_task">Add a new task</string>
    <string name="add_by_suggestions">Add by suggestions</string>
    <string name="disclaimer_data">All information is supplied without guarantee</string>

    <string name="title_activity_new_task" translatable="false">NewTaskActivity</string>
    <string name="title_activity_lesson_view_task" translatable="false">LessonViewTask</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3281259391371340/1580552913</string>
    <string name="new_">New</string>

    <string name="set_to_break">Set to break</string>
    <string name="set_to_lesson">Set to lesson</string>
    <string name="remove">Remove</string>
    <string name="set_to_free">Set to free</string>

    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="prefix">Prefix</string>
    <string name="dialog_new_teacher_failed">You have to enter at least a second name</string>

    <string name="remove_timeunit">Remove Time Unit</string>
    <string name="cannot_remove_timeunit_toast">Cannot remove last time unit. One needed at least</string>
    <string name="remove_timeunit_dialog_text">This will remove the time unit (%s) and all lessons at that time unit. Proceed?</string>

    <string name="transition_name_lesson_image" translatable="false">lesson_image</string>

    <string name="min_5">5 minutes</string>
    <string name="min_10">10 minutes</string>
    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_45">45 minutes</string>
    <string name="action_settings">Settings</string>
    <string name="select_image">Select Image</string>

    <string name="kgh_login">KGH Login</string>
    <string name="login">Login</string>
    <string name="login_name">Login name</string>
    <string name="password">Password</string>
    <string name="kgh_login_info">Use your SLZ login</string>
    <string name="kgh_login_notice">Your password will be stored fully encrypted locally, so that you don\'t have to enter it each time. To retrieve the data from the school server the login credentials will be used. Your credentials will be passed to our servers through an encrypted channel, Our servers wont save your information. We cannot guarantee for the security of the connection between our servers and the ones from your school</string>

    <string name="prefc_main_settings">General</string>
    <string name="prefc_notifications">Notifications</string>
    <string name="prefc_debug">Debug</string>
    <string name="pref_enable_title" translatable="false">Enable</string>
    <string name="pref_enable_summary" translatable="false">Enable summary</string>
    <string name="pref_enable_debug_notif_title">Debug Notifications</string>
    <string name="pref_enable_debug_notif_summary">Debug Notifications will be shown each 2 Minutes</string>
    <string name="pref_hide_notifications_on_end_title">Hide notification after lesson</string>
    <string name="pref_hide_notifications_on_end_summary">If the lesson is over, the notification of it will get dismissed automatically</string>
    <string name="pref_enable_notifications_title">Notifications</string>
    <string name="pref_enable_notifications_summary">Notifications will show you your next lesson</string>
    <string name="pref_list_notify_time_before_lesson_title">Notify before in minutes</string>
    <string name="pref_list_notify_time_before_lesson_summary">The minutes before a lesson, when the user will be notified</string>

    <string name="timegrid_notmore_than_9_lessons">Currently no more than 9 lessons are supported</string>
    <string name="toast_repre_plan_no_internet">This feature needs an active network connection. Please try again later</string>
    <string name="toast_repre_plan_no_internet_showing_cache">Couldn\'t load information from network. Showing last retrieved information. May be outdated.</string>
    <string name="toast_failed_to_login">Failed to login. Please check your login credentials</string>

    <string name="dbg_show_test_notif" translatable="false">Show test notification</string>
    <string name="dbg_start_logging" translatable="false">Start Logging</string>
    <string name="dbg_stop_logging" translatable="false">Stop Logging</string>
    <string name="dbg_share_last_log" translatable="false">Share last log</string>
    <string name="dbg_clear_log" translatable="false">Clear log</string>
    <string name="dbg_deactivate_debug_menu" translatable="false">Deactivate debug menu</string>
    <string name="dbg_fake_pending_time_unit" translatable="false">Fake pending TimeUnit</string>
    <string name="dbg_reset_notification_pref" translatable="false">Reset Notification state</string>

</resources>
