<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_show_test_notif"
            android:text="@string/dbg_show_test_notif" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_toggle_logging"
            tools:text="Stop Logging" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_share_last_log"
            android:text="@string/dbg_share_last_log" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_clear_log"
            android:text="@string/dbg_clear_log" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_fake_pending_timeunit"
            android:text="@string/dbg_fake_pending_time_unit" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_reset_notif_state"
            android:text="@string/dbg_reset_notification_pref" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dbg_deactivate_debug_menu"
            android:text="@string/dbg_deactivate_debug_menu" />

    </LinearLayout>

</ScrollView>