<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/pref_enable_notifications_summary" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/watch_preview" />

    <include layout="@layout/list_item_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <CheckBox
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/pref_hide_notif_at_end"
            android:layout_gravity="end|center_vertical" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="48dp"
            android:layout_marginEnd="48dp"
            android:layout_gravity="start|center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/pref_hide_notifications_on_end_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:text="@string/pref_hide_notifications_on_end_summary" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>